experimental/ir/testdata/fields/maps/collision.proto.stderr.txt
error: `FooBarEntry` declared multiple times
  --> testdata/fields/maps/collision.proto:7:5
   |
 7 |     map<int32, int32> foo_bar = 1;
   |     ^^^^^^^^^^^^^^^^^ ------- implies `repeated FooBarEntry`
   |      |
   |      first here, as a message type
 8 |
 9 |     message FooBarEntry {}
   |             ----------- ...also declared here
   |
   = help: map-typed fields implicitly declare a nested message type: field
           `foo_bar` produces a map entry type `FooBarEntry`

error: `Entry` declared multiple times
  --> testdata/fields/maps/collision.proto:13:5
   |
13 |     map<int32, int32> _ = 1;
   |     ^^^^^^^^^^^^^^^^^ - implies `repeated Entry`
   |      |
   |      first here, as a message type
14 |     map<int32, int32> __ = 2;
   |     ----------------- ...also declared here
   |
   = help: map-typed fields implicitly declare a nested message type: field `_`
           produces a map entry type `Entry`

error: message fields have the same JSON name
  --> testdata/fields/maps/collision.proto:14:23
   |
13 |     map<int32, int32> _ = 1;
   |                       - this implies JSON name ``
14 |     map<int32, int32> __ = 2;
   |                       ^^ this also implies that name

encountered 3 errors
